--- a/styles/app.css
+++ b/styles/app.css
@@ -19,7 +19,7 @@ body {
 }
 .component-selected::after {
   content: ' ';
-  @apply border-info border border-dashed w-full h-full absolute left-0 top-0 pointer-events-none block;
+  @apply border-red border border-dashed w-full h-full absolute left-0 top-0 pointer-events-none block;
 }
 
 .transition {
