--- a/styles/app.css
+++ b/styles/app.css
@@ -2,9 +2,10 @@
 @tailwind base;
 @tailwind components;
 @import url('https://use.typekit.net/mpa1wkh.css');
+@import url('https://app3.lichishop.com/upload/fonts/fonts.css');
 html,
 body {
-  font-family: 'acumin-pro', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+  font-family: 'Bodoni Cyrillic', 'Futura PT', 'acumin-pro', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
     'Helvetica Neue', sans-serif;
   color: rgb(75, 75, 75);
